[package]
name = "egccri-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/runtime",
    "crates/invoker",
    "crates/registry",
    "crates/wasi-messaging",
    "sdk/rust",
    "guest"
]

[dependencies]
runtime = { path = "crates/runtime" }
wasi-messaging = { path = "crates/wasi-messaging" }
tokio = { workspace = true }
clap = { version = "4", features = ["derive"] }

[workspace.dependencies]
# wait wasmtime version 10 publish.
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", rev = "f3a7f631836bca3297cc9fd26d8eb7176519d306", features = ["component-model"] }
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime", rev = "f3a7f631836bca3297cc9fd26d8eb7176519d306", features = ["tokio"] }
tokio = { version = "1.21.2", features = ["full"] }
wit-bindgen = "0.7.0"
warg-cli = { git = "https://github.com/curtiseng/registry.git", branch = "update-wasmtime-version" }
#wasmtime = { version = "6.0.0", features = ["component-model"] }
#wasi-common = { git = "https://github.com/bytecodealliance/preview2-prototyping", rev = "75f8fc6151bc9e8cb92f2547f81a3b7056889735" }
#wasi-cap-std-sync = { git = "https://github.com/bytecodealliance/preview2-prototyping", rev = "75f8fc6151bc9e8cb92f2547f81a3b7056889735" }
#host = { git = "https://github.com/bytecodealliance/preview2-prototyping", rev = "75f8fc6151bc9e8cb92f2547f81a3b7056889735" }
