[package]
name = "egccri-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "egccri"
path = "src/bin/egccri.rs"

[[bin]]
name = "egccri-client"
path = "src/bin/client.rs"

[workspace]
members = [
    "crates/runtime",
    "crates/invoker",
    "crates/registry",
    "crates/wasi-messaging",
    "crates/invoker-grpc",
    "crates/host-bindgen",
    "crates/kv-storage",
    "crates/runtime-api",
    "library/micro-async-module",
    "library/pool",
    "sdk/rust",
    "guest/messaging",
    "guest/grpc-service",
]

[dependencies]
micro-async-module = { path = "library/micro-async-module" }
runtime = { path = "crates/runtime" }
invoker-grpc = { path = "crates/invoker-grpc" }
wasi-messaging = { path = "crates/wasi-messaging" }
kv-storage = { path = "crates/kv-storage" }
runtime-api = { path = "crates/runtime-api" }
tokio = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }

[workspace.dependencies]
# wait wasmtime version 10 publish.
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", rev = "f3a7f631836bca3297cc9fd26d8eb7176519d306", features = ["component-model"] }
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime", rev = "f3a7f631836bca3297cc9fd26d8eb7176519d306", features = ["tokio"] }
#wasmtime = { version = "6.0.0", features = ["component-model"] }
#wasi-common = { git = "https://github.com/bytecodealliance/preview2-prototyping", rev = "75f8fc6151bc9e8cb92f2547f81a3b7056889735" }
#wasi-cap-std-sync = { git = "https://github.com/bytecodealliance/preview2-prototyping", rev = "75f8fc6151bc9e8cb92f2547f81a3b7056889735" }
#host = { git = "https://github.com/bytecodealliance/preview2-prototyping", rev = "75f8fc6151bc9e8cb92f2547f81a3b7056889735" }
wit-bindgen = "0.7.0"
warg-client = { git = "https://github.com/curtiseng/registry.git", branch = "update-wasmtime-version" }
warg-crypto = { git = "https://github.com/curtiseng/registry.git", branch = "update-wasmtime-version" }
warg-protocol = { git = "https://github.com/curtiseng/registry.git", branch = "update-wasmtime-version" }
tokio = { version = "1.21.2", features = ["full"] }
tonic = "0.9.2"
prost = "0.11.9"
tonic-build = "0.9.2"
thiserror = "1.0.37"
anyhow = "1.0.65"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["local-time"] }
console-subscriber = { version = "0.1.8" }
tracing-appender = "0.2"
config = { version = "0.13.2", features = ["toml"]}
async-trait = "0.1"