[package]
name = "invoker-grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
runtime = { path = "../runtime" }
host-bindgen = { path = "../host-bindgen" }
invoker = { path = "../invoker" }
tonic = { workspace = true }
prost = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
