[package]
name = "registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warg-client = { workspace = true }
warg-crypto = { workspace = true }
warg-protocol = { workspace = true }
dirs = "5.0.1"
thiserror = { workspace = true }
serde = { workspace = true }
