[package]
name = "runtime-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
micro-async-module = { path = "../../library/micro-async-module" }
runtime-api = { path = "../runtime-api" }
registry = { path = "../registry" }
tonic = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
